--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -8,9 +8,9 @@
                             <div class="card-body p-md-5 mx-md-4">
 
                                 <div class="text-center">
-                                    <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/lotus.webp"
+                                    <img src="https://upload.wikimedia.org/wikipedia/commons/1/13/Logo_PTIT_University.png"
                                         style="width: 185px;" alt="logo">
-                                    <h4 class="mt-1 mb-5 pb-1">Học viện công nghệ bưu chính viễn thông</h4>
+                                    <h4 class="mt-1 mb-5 pb-1">Học viện Công Nghệ Bưu Chính Viễn Thông</h4>
                                 </div>
 
                                 <!-- <form> -->
