--- a/src/app/add-subject/add-subject.component.html
+++ b/src/app/add-subject/add-subject.component.html
@@ -101,7 +101,7 @@
                         class="px-2 text-primary"> <i class='bx bx-user font-size-18'></i> </a>
                     </li>
                     <li class="list-inline-item">
-                      <button class="btn custom-btn" [ngClass]="employee.isRegister ? 'btn-danger' : 'btn-primary'"
+                      <button class="btn test" [ngClass]="employee.isRegister ? 'btn-danger' : 'btn-primary'"
                         (click)="toggleRegister(employee)" data-bs-toggle="tooltip"
                         [title]="employee.isRegister ? 'Đóng đăng kí' : 'Mở đăng kí'">
 
