--- a/src/app/add-subject/add-subject.component.scss
+++ b/src/app/add-subject/add-subject.component.scss
@@ -115,3 +115,7 @@ a {
   border-color: #ff99cc;
   cursor: pointer;
 }
+.btn test .btn-primary {
+  background-color: #35fd0d !important; /* xanh chuẩn Bootstrap 5 */
+  border-color: #3dfd0d !important;
+}
